@@ -960,17 +960,17 @@ cbpBinTrashRollingGreyEmpty,blocks,block,,,Rolling Trash Bin Empty,,
 cbpBinTrashRollingBlackEmpty,blocks,block,,,Rolling Trash Bin Empty,,
 cbpBinTrashRollingPinkEmpty,blocks,block,,,Rolling Trash Bin Empty,,
 cbpBinTrashRollingRandomHelper,blocks,block,,,Rolling Trash Bin Random Helper,,
-cbpPoleSquareTipCentered,shapes,Block,,,Pole Tip Centered,,
-cbpBookShelfDubTopFull01_Poof,shapes,Block,,,Bookcase,,
-cbpBookShelfDubBotFull01_Poof,shapes,Block,,,Bookcase,, 
-cbpBookShelfSingleBottomPoof,shapes,Block,,,Bookcase,,
-cbpBookShelfSingleTopPoof,shapes,Block,,,Bookcase,,
-cbpBookcasePoof,shapes,Block,,,Bookcase,,
-cbpBookcaseCornerPoof,shapes,Block,,,Bookcase,,
+cbpPoleSquareTipCentered,blocks,Block,,,Pole Tip Centered,,
+cbpBookShelfDubTopFull01_Poof,blocks,Block,,,Bookcase,,
+cbpBookShelfDubBotFull01_Poof,blocks,Block,,,Bookcase,, 
+cbpBookShelfSingleBottomPoof,blocks,Block,,,Bookcase,,
+cbpBookShelfSingleTopPoof,blocks,Block,,,Bookcase,,
+cbpBookcasePoof,blocks,Block,,,Bookcase,,
+cbpBookcaseCornerPoof,blocks,Block,,,Bookcase,,
 cbpBowlingBall_Corner,shapes,Block,,,Bowling Ball corner,,
 cbpBillboard,blocks,block,,,Billboard Strong,,
-cbpMetalPipeStraight_explode,shapes,Block,,,Metal Pipe Straight Explode,,
-cbpBarrelGasQuadA,shapes,Block,,,Barrel Gas Quad A,,
+cbpMetalPipeStraight_explode,blocks,Block,,,Metal Pipe Straight Explode,,
+cbpBarrelGasQuadA,blocks,Block,,,Barrel Gas Quad A,,
 cbpSpawn_Robbery_Trap,blocks,Block,,,Spawn Robbery Air Trap,,
 cbpSpawned_Robbery_Trap,blocks,Block,,,Spawned Robbery Air Trap,,
 cbpSpawn_Robbery_Alarm,blocks,Block,,,Spawn Robbery Trap Plate,,
@@ -1082,5 +1082,6 @@ cbpWineBottleCornerOffset,blocks,Block,,,Wine Bottle Corner Offset,,
 cbpTerrOre,blocks,Terrain,,,CBP Oil Deposit,,
 cbpTerrOreCoal,blocks,Terrain,,,CBP Coal Deposit,,
 cbpMattressFlat,blocks,Block,,X,Mattress Flat,,
+cbpWindowStoreOneSidedFullNWL,shapes,Block,,,Window Store One Sided NWL,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
