@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0045 :
+* Added a waterproof window.
+
 A21.2.001.0044 :
 * Added 2 terrain blocks.
 * Aligned cbpMatressThin to be flush with the floor.
